Adicionado conteudo a pagina Cultura.html

--- a/cultura.html
+++ b/cultura.html
@@ -75,13 +75,13 @@
                 <!-- Slides -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="Imagens/Culinaria/culinaria5.jpg" alt="Primeiro Slide" class="banner d-block w-100">
+                        <img src="Imagens/card3.jpg" alt="Primeiro Slide" class="banner d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="Imagens/Culinaria/culinaria2.jpg" alt="Segundo Slide" class="banner d-block w-100">
+                        <img src="Imagens/Cultura/cultura7.jpg" alt="Segundo Slide" class="banner d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="Imagens/Culinaria/culinaria4.jpg" alt="Terceiro Slide" class="banner d-block w-100">
+                        <img src="Imagens/Cultura/cultura3.jpg" alt="Terceiro Slide" class="banner d-block w-100">
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
         <div class="card-deck">
 
             <div class="card">
-                <img class="card-img-top" src="Imagens/Culinaria/culinaria1.jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="Imagens/Cultura/cultura1.jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                     <h5 class="card-title">Folklore e Danças Tradicionais</h5>
                     <p class="card-text">A cultura chilena é rica em tradições folclóricas e danças típicas, como a cueca, dança nacional do Chile, que retrata a paixão e o romantismo por meio de movimentos elegantes e coloridos. Além da cueca, outras danças folclóricas, como o baile de La Tirana e a dança dos Huasos, representam a diversidade cultural do país.</p>
@@ -122,7 +122,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="Imagens/Culinaria/culinaria2.jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="Imagens/Cultura/cultura2.jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                     <h5 class="card-title">Gastronomia e Vinhos</h5>
                     <p class="card-text">A gastronomia chilena é uma fusão de influências indígenas, espanholas e europeias, resultando em pratos deliciosos e variados. Destacam-se o ceviche, as empanadas, o pastel de choclo e o asado. Além disso, o Chile é reconhecido mundialmente pela qualidade de seus vinhos, com vinícolas renomadas em todo o país.</p>
@@ -130,7 +130,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="Imagens/Culinaria/culinaria3.jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="Imagens/Cultura/cultura3.jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                     <h5 class="card-title">Esportes Radicais e Aventura</h5>
                     <p class="card-text">Com uma geografia diversificada, que inclui desertos, montanhas, lagos e oceanos, o Chile oferece inúmeras oportunidades para a prática de esportes radicais e aventuras ao ar livre. Trekking, montanhismo, surfe, esqui e snowboard são apenas algumas das atividades populares entre os chilenos e turistas.</p>
@@ -144,7 +144,7 @@
         <div class="card-deck">
 
             <div class="card">
-                <img class="card-img-top" src="Imagens/Culinaria/culinaria1.jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="Imagens/Cultura/cultura4.jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                     <h5 class="card-title">Arte e Literatura</h5>
                     <p class="card-text">A cultura chilena tem uma rica tradição artística e literária, com artistas e escritores renomados que contribuíram significativamente para o cenário cultural do país e além. Nomes como Pablo Neruda, Gabriela Mistral, Violeta Parra e Roberto Matta são reverenciados tanto nacional quanto internacionalmente.</p>
@@ -152,7 +152,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="Imagens/Culinaria/culinaria2.jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="Imagens/Cultura/cultura5.jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                     <h5 class="card-title">Tradições Religiosas e Festivais</h5>
                     <p class="card-text">O Chile celebra uma variedade de festivais e tradições religiosas ao longo do ano, que refletem a devoção e a espiritualidade do povo chileno. Festas como a Fiesta de la Tirana, a Fiesta de la Virgen de Andacollo e a Fiesta de la Candelaria são marcadas por música, dança e rituais religiosos.</p>
@@ -160,7 +160,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="Imagens/Culinaria/culinaria3.jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="Imagens/Cultura/cultura6.jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                     <h5 class="card-title">Música e Festivais Culturais</h5>
                     <p class="card-text">A música desempenha um papel importante na vida cultural do Chile, com uma variedade de gêneros e estilos que refletem a diversidade do país. Festivais como o Festival Internacional de la Canción de Viña del Mar e o Festival del Huaso de Olmué destacam a riqueza e o talento musical chileno, atraindo artistas e espectadores de todo o mundo.</p>
