--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <div class="div-header">
       <h1><strong>Bem-vindo ao Chile!</strong></h1>
-      <h2>Dos Andes ao oceano, a beleza do Chile não tem limites</h2>
+      <h2>Dos Andes ao oceano, a beleza do Chile não tem limites.</h2>
 
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <!-- Slides -->
