Finalizado! (eu acho)

--- a/culinaria.html
+++ b/culinaria.html
@@ -115,7 +115,12 @@
             <div class="container txt-conteudo">
                 <h2>Influências da Culinária Indígena no Chile</h2>
 
-                <p>A culinária do Chile reflete fortemente as influências indígenas, que contribuíram com ingredientes e técnicas de preparo distintas. Um exemplo notável é o uso da quinoa, um grão altamente nutritivo cultivado nas terras altas dos Andes. A quinoa é frequentemente usada em pratos como saladas, sopas e guisados, adicionando textura e sabor às refeições chilenas. Além disso, o ají, uma variedade de pimenta picante, é um ingrediente fundamental em muitos pratos tradicionais, proporcionando um toque de calor e profundidade de sabor.
+                <p>A culinária do Chile reflete fortemente as influências indígenas, que contribuíram com ingredientes e
+                    técnicas de preparo distintas. Um exemplo notável é o uso da quinoa, um grão altamente nutritivo
+                    cultivado nas terras altas dos Andes. A quinoa é frequentemente usada em pratos como saladas, sopas
+                    e guisados, adicionando textura e sabor às refeições chilenas. Além disso, o ají, uma variedade de
+                    pimenta picante, é um ingrediente fundamental em muitos pratos tradicionais, proporcionando um toque
+                    de calor e profundidade de sabor.
                 </p>
             </div>
         </div>
@@ -126,7 +131,12 @@
             <div class="container d-flex justify-content-between">
                 <div class="container txt-conteudo">
                     <h2 align="right">Influências da Culinária Espanhola no Chile</h2>
-                    <p align="right">A influência espanhola na culinária chilena é evidente em pratos como as empanadas, que são uma parte essencial da dieta chilena. Essas deliciosas pastéis recheados podem conter uma variedade de recheios, como carne, frango, queijo e mariscos, e são frequentemente consumidas como lanches ou refeições rápidas. Além das empanadas, outros pratos espanhóis, como o pastel de choclo, uma torta de milho doce com carne e azeitonas, também são populares entre os chilenos.
+                    <p align="right">A influência espanhola na culinária chilena é evidente em pratos como as empanadas,
+                        que são uma parte essencial da dieta chilena. Essas deliciosas pastéis recheados podem conter
+                        uma variedade de recheios, como carne, frango, queijo e mariscos, e são frequentemente
+                        consumidas como lanches ou refeições rápidas. Além das empanadas, outros pratos espanhóis, como
+                        o pastel de choclo, uma torta de milho doce com carne e azeitonas, também são populares entre os
+                        chilenos.
                     </p>
                 </div>
                 <img class="img-turismo" src="Imagens/Culinaria/conteudo1.png" alt="Imagem paisagem">
@@ -143,7 +153,9 @@
                 <img class="card-img-top" src="Imagens/Culinaria/culinaria1.jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                     <h5 class="card-title">Ceviche Chileno</h5>
-                    <p class="card-text">Uma deliciosa mistura de peixe fresco marinado em suco de limão ou limão verde, misturado com cebola roxa, pimentão, coentro e temperos. O ceviche chileno é uma explosão de sabores frescos e cítricos, perfeito para os amantes de frutos do mar.</p>
+                    <p class="card-text">Uma deliciosa mistura de peixe fresco marinado em suco de limão ou limão verde,
+                        misturado com cebola roxa, pimentão, coentro e temperos. O ceviche chileno é uma explosão de
+                        sabores frescos e cítricos, perfeito para os amantes de frutos do mar.</p>
                 </div>
             </div>
 
@@ -151,7 +163,10 @@
                 <img class="card-img-top" src="Imagens/Culinaria/culinaria2.jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                     <h5 class="card-title">Asado Chileno</h5>
-                    <p class="card-text">Um churrasco tradicional chileno, onde diversos tipos de carne, como carne bovina, cordeiro e frango, são grelhados lentamente em uma churrasqueira a lenha. Geralmente acompanhado por molhos picantes, saladas frescas e pão, o asado é uma refeição festiva e deliciosa apreciada em ocasiões especiais.</p>
+                    <p class="card-text">Um churrasco tradicional chileno, onde diversos tipos de carne, como carne
+                        bovina, cordeiro e frango, são grelhados lentamente em uma churrasqueira a lenha. Geralmente
+                        acompanhado por molhos picantes, saladas frescas e pão, o asado é uma refeição festiva e
+                        deliciosa apreciada em ocasiões especiais.</p>
                 </div>
             </div>
 
@@ -159,7 +174,9 @@
                 <img class="card-img-top" src="Imagens/Culinaria/culinaria3.jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                     <h5 class="card-title">Chupe de Mariscos</h5>
-                    <p class="card-text">O Chupe de Mariscos é uma sopa cremosa de frutos do mar, com camarões, mexilhões, vieiras e peixe, combinados com leite de coco ou creme de leite, legumes frescos e temperos. Servido quente, é uma escolha popular durante os meses frios no Chile.</p>
+                    <p class="card-text">O Chupe de Mariscos é uma sopa cremosa de frutos do mar, com camarões,
+                        mexilhões, vieiras e peixe, combinados com leite de coco ou creme de leite, legumes frescos e
+                        temperos. Servido quente, é uma escolha popular durante os meses frios no Chile.</p>
                 </div>
             </div>
 
