--- a/turismo.html
+++ b/turismo.html
@@ -127,18 +127,18 @@
             <div class="container txt-conteudo">
                 <h2>Deserto do Atacama</h2>
 
-                    <p>Preparem-se para uma aventura épica no deserto mais árido do mundo - o Deserto do Atacama, no
-                        Chile!
-                        Aqui, as paisagens parecem saídas de outro planeta, com lagunas coloridas, vulcões adormecidos e
-                        dunas que desafiam a gravidade.
-                        <br><br>
+                <p>Preparem-se para uma aventura épica no deserto mais árido do mundo - o Deserto do Atacama, no
+                    Chile!
+                    Aqui, as paisagens parecem saídas de outro planeta, com lagunas coloridas, vulcões adormecidos e
+                    dunas que desafiam a gravidade.
+                    <br><br>
 
-                        E se você é fã de astronomia, prepare-se para uma noite estrelada que vai te deixar de queixo
-                        caído.
-                        Com céus tão limpos que você pode contar as estrelas, o Atacama é um paraíso para os amantes do
-                        universo.
-                        <br><br>
-                    </p>
+                    E se você é fã de astronomia, prepare-se para uma noite estrelada que vai te deixar de queixo
+                    caído.
+                    Com céus tão limpos que você pode contar as estrelas, o Atacama é um paraíso para os amantes do
+                    universo.
+                    <br><br>
+                </p>
             </div>
         </div>
 
@@ -167,7 +167,8 @@
             <div class="container d-flex justify-content-between">
                 <div class="container txt-conteudo">
                     <h2 align="right">Torres del Paine</h2>
-                    <p align="right">Se vocês estão em busca de aventura, paisagens de tirar o fôlego e pinguins fofinhos, então
+                    <p align="right">Se vocês estão em busca de aventura, paisagens de tirar o fôlego e pinguins
+                        fofinhos, então
                         preparem-se para conhecer o Parque Nacional Torres del Paine, no Chile!
                         <br><br>
 
@@ -193,22 +194,22 @@
                     <p class="text-center">Descubra lugares incríveis</p>
             </div>
             <div class="row photos">
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo1.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/Turismo/turismo1.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo2.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/Turismo/turismo2.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo3.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/Turismo/turismo3.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo4.png" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/Turismo/turismo4.png"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo5.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/Turismo/turismo5.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo6.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/Turismo/turismo6.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo7.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/Turismo/turismo7.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo8.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="Imagens/Turismo/turismo8.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo1.jpg"
+                        data-lightbox="photos"><img class="img-fluid" src="Imagens/Turismo/turismo1.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo2.jpg"
+                        data-lightbox="photos"><img class="img-fluid" src="Imagens/Turismo/turismo2.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo3.jpg"
+                        data-lightbox="photos"><img class="img-fluid" src="Imagens/Turismo/turismo3.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo4.png"
+                        data-lightbox="photos"><img class="img-fluid" src="Imagens/Turismo/turismo4.png"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo5.jpg"
+                        data-lightbox="photos"><img class="img-fluid" src="Imagens/Turismo/turismo5.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo6.jpg"
+                        data-lightbox="photos"><img class="img-fluid" src="Imagens/Turismo/turismo6.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo7.jpg"
+                        data-lightbox="photos"><img class="img-fluid" src="Imagens/Turismo/turismo7.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Imagens/Turismo/turismo8.jpg"
+                        data-lightbox="photos"><img class="img-fluid" src="Imagens/Turismo/turismo8.jpg"></a></div>
             </div>
         </div>
     </div>
